<resources>
    <string name="app_name">Finance Management App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Developer: Shashi Singh</string>
    <string name="nav_header_subtitle">E-mail: alphasingh8434@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Info about Developer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_new_data_intro">Enter the following parameters :</string>
    <string name="date_adding">Date :</string>
    <string name="amount_adding">"Amount : "</string>
    <string name="amount_info_adding">Text :</string>
    <string name="text_hint">Detail about amount:</string>
</resources>