<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/add_new_data_intro"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="388dp"
        android:layout_marginBottom="204dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/date_adding"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="233dp"
                android:layout_height="98dp"
                android:ems="10"
                android:gravity="center"
                android:hint="dd-mm-yy"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/amount_adding"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="235dp"
                android:layout_height="87dp"
                android:ems="10"
                android:gravity="center"
                android:hint="Enter the amount:"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/amount_info_adding"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/detail"
                android:layout_width="237dp"
                android:layout_height="91dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/text_hint"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="write_in_file"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.378" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="read_file"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.544" />

</androidx.constraintlayout.widget.ConstraintLayout>